# 3d_app_framework

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md
SDL2-2.0.3/include/: SDL_render.h  SDL_stdinc.h
cmake/: assimp-config.cmake
include/: Actor.h  Animation.h  ArtAssetLibrary.h  Carrier.h  Component.h  ComponentFactories.h  ComponentLibrary.h  Definitions.h  Game.h  GameFunctions.h  GameUtils.h  GraphicsDevice.h  Infantry.h  InputDevice.h  Physics.h  Player.h  Sprite.h  Texture.h  Timer.h  View.h
include/Component/: Animation.h  Bullet.h  Carrier.h  ComponentFactories.h  Infantry.h  Player.h
include/Core/: Actor.h  Game.h  GraphicsDevice.h  InputDevice.h  OpenGLRenderer.h  Physics.h  Renderer.h  SDLRenderer.h  Sprite.h  Texture.h  Timer.h  View.h
include/EventSystem/: Dispatcher.h  Subscriber.h
include/Util/: Definitions.h  GameFunctions.h
include/Virtual/: Component.h
include/art_library/: ArtAssetLibrary.h  ComponentLibrary.h
include/components/: Animation.h  Bullet.h  Carrier.h  ComponentFactories.h  Infantry.h  Player.h
include/core/: Actor.h  Game.h  InputDevice.h  Physics.h  Sprite.h  Texture.h  View.h  actor.h  app_2d.h  app_3d.h  input_device.h  physics_2d.h
include/event_system/: Dispatcher.h  Subscriber.h
include/input/: control_map.h  control_utils.h  controller.h  gadgeteer_input.h  input_manager.h  keyboard.h  mouse.h  sdl_input.h
include/render/: Renderer.h  actor.h  camera.h  renderer.h
include/render/opengl/: actor_3d.h  gl_camera.h  gl_drawable.h  gl_model.h  gl_model_store.h  opengl_camera.h  opengl_drawable.h  opengl_model.h  opengl_renderer.h
include/render/sdl/: SDLRenderer.h  actor_2d.h  sdl_animation.h  sdl_camera.h  sdl_renderer.h  sdl_texture.h  sdl_view.h  sprite.h
include/util/: box2d_utils.h  definitions.h  game_utils.h  timer.h
include/virtual/: Component.h  app.h  component.h
packs/: CMakeLists.txt  README.txt
source/: Actor.cpp  Animation.cpp  ArtAssetLibrary.cpp  Bullet.cpp  CMakeLists.txt  CMakeLists.txt~  Carrier.cpp  Component.cpp  ComponentFactories.cpp  Game.cpp  GraphicsDevice.cpp  Infantry.cpp  InputDevice.cpp  Physics.cpp  Player.cpp  Source.cpp  Sprite.cpp  Texture.cpp  Timer.cpp  View.cpp  main.cpp  pugixml.cpp
source/Component/: Animation.cpp  Carrier.cpp  ComponentFactories.cpp  Infantry.cpp  Player.cpp
source/Core/: Actor.cpp  Game.cpp  GraphicsDevice.cpp  InputDevice.cpp  OpenGLRenderer.cpp  Physics.cpp  SDLRenderer.cpp  Sprite.cpp  Texture.cpp  Timer.cpp  View.cpp
source/Core/PugiXML/: pugixml.cpp
source/EventSystem/: Dispatcher.cpp
source/Virtual/: Component.cpp
source/art_library/: ArtAssetLibrary.cpp
source/components/: Animation.cpp  Bullet.cpp  CMakeLists.txt  Carrier.cpp  ComponentFactories.cpp  Infantry.cpp  Player.cpp
source/core/: Actor.cpp  CMakeLists.txt  Game.cpp  InputDevice.cpp  Physics.cpp  Sprite.cpp  Texture.cpp  Timer.cpp  View.cpp  actor.cpp  app_2d.cpp  app_3d.cpp  input_device.cpp  physics_2d.cpp  timer.cpp
source/core/PugiXML/: pugixml.cpp
source/event_system/: CMakeLists.txt  Dispatcher.cpp
source/input/: CMakeLists.txt  control_map.cpp  controller.cpp  gadgeteer_input.cpp  keyboard.cpp  mouse.cpp  sdl_input.cpp
source/render/: CMakeLists.txt  actor.cpp
source/render/opengl/: CMakeLists.txt  actor.cpp  actor_3d.cpp  gl_camera.cpp  gl_drawable.cpp  gl_model.cpp  gl_model_store.cpp  opengl_camera.cpp  opengl_model.cpp  opengl_renderer.cpp
source/render/sdl/: SDLRenderer.cpp  actor_2d.cpp  sdl_animation.cpp  sdl_camera.cpp  sdl_renderer.cpp  sdl_texture.cpp  sdl_view.cpp  sprite.cpp
source/shaders/: CMakeLists.txt  SimpleVertexShader.vert
source/util/: CMakeLists.txt  timer.cpp
source/virtual/: Component.cpp  component.cpp
